# MagAOX

./: .clang-format  .codacy.yaml  .editorconfig  .gitignore  Dockerfile  Dockerfile.rocky  Dockerfile.ubuntu  Makefile  README.md  Vagrantfile  build_and_run_container.sh
.circleci/: config.yml
.github/workflows/: build-doxygen.yml  build-utm.yml  build-vm-arm.yml  build-vm-x86.yml  container.yml  install-on-centos.yml  install-on-rocky.yml  install-on-ubuntu.yml  install-rocky.yml  install-ubuntu.yml  install.yml
2022_ANT/: README.md
INDI/: Makefile
INDI/INDI/: Makefile  compiler.c  config.h  connect_to.c  connect_to.h  evalINDI.c  fq.c  fq.h  getINDI.c  indiapi.h  indiserver.c  open_named_fifo.c  open_named_fifo.h  pipe_wrapper.c  pipe_wrapper.h  setINDI.c  strcat_varargs.c  strcat_varargs.h
INDI/libcommon/: Config.cpp  Config.hpp  ConfigFile.cpp  ConfigFile.hpp  Fits.cpp  Fits.hpp  IndiClient.cpp  IndiClient.hpp  IndiConnection.cpp  IndiConnection.hpp  IndiDriver.cpp  IndiDriver.hpp  IndiElement.cpp  IndiElement.hpp  IndiMessage.cpp  IndiMessage.hpp  IndiProperty.cpp  IndiProperty.hpp  IndiPropertyMap.cpp  IndiPropertyMap.hpp  IndiXmlParser.cpp  IndiXmlParser.hpp  Logger.cpp  Makefile  MutexLock.hpp  README.md  ReadWriteLock.hpp  System.cpp  SystemSocket.cpp  SystemSocket.hpp  TCPConnection.cpp  TCPListener.cpp  TCPListener.hpp  Thread.cpp  Thread.hpp  TimeStamp.cpp  TimeStamp.hpp
INDI/liblilxml/: Makefile  README.md  lilxml.c  lilxml.h
INDI/xindidriver/: Makefile  xindidriver.cpp
INDI/xindiserver/: remoteDriver.hpp  tunneledHost.hpp
LBT/libcommon/: .Makefile.kate-swp  Cmd.hpp  Config.cpp  Event.cpp  IndiClient.hpp  (+4 more)
Make/: common.mk  config.mk  magAOX.mk  magAOXApp.mk  magAOXGUI.mk  magAOXUtil.mk  python.mk  pythonApp.mk
apps/audibleAlerts/: Makefile  container-opentts.service  pyproject.toml  setup.py
apps/audibleAlerts/audibleAlerts/: core.py  opentts_bridge.py  personality.py
apps/audibleAlerts/audibleAlerts/personalities/: default.xml  lab_mode.xml
apps/corAlign/: Makefile  corAlign.py  coralign.py  pyproject.toml  utils.py
apps/dbIngest/: Makefile  dbIngest.py  pyproject.toml
apps/efcControl/: Makefile  efcControl.py  pyproject.toml  utils.py
apps/pupilCorAlign/: Makefile  PupilCorAlign.py  pyproject.toml
apps/pythonIndiExample/: Makefile  pyproject.toml  pythonIndiExample.py
apps/visxCtrl/: Makefile  README.md  pyproject.toml
apps/visxCtrl/visxCtrl/: libqhy.py  qhyccd.py  xapp.py
libINDI/: Makefile
libLBTI/: Makefile  README.md
libMagAOX/: Makefile  libMagAOX.hpp  magAOXPCH.mk
local/: common.example.mk  config.example.mk
python/: README.rst  pyproject.toml
python/magaox/: camera.py  cli.py  constants.py  deformable_mirror.py  utils.py
python/magaox/db/: README.md  __init__.py  config.py  ingest.py  records.py
python/magaox/db/cli/: __init__.py
python/magaox/db/cli/commands/: _base.py  backfill.py  inventory.py  setup.py
python/magaox/db/commands/: __init__.py  _base.py  backfill.py  inventory.py  setup.py
python/magaox/db/sql/: setup_tables_and_indices.sql  setup_users.sql  setup_views.sql
python/magaox/indi/: device.py
python/magaox/quicklook/: core.py  utils.py
python/magaox/quicklook/commands/: __init__.py  _base.py  bundle.py
rtSetup/: irqbalance  irqbalance_policyscript  magaox_irqpolscript
scripts/: _common.sh  cacao_startup_if_present  collect_camera_configs_for_darks  creadmdisp  creaimshm  dmdispbridge  git_check_all  go_get_darks  howfs_apply  instrument_backup_sync  killIndiZombies  lookyloo  lowfs_apply  lowfs_switch  lowfs_switch_apply  magaox  magaox_procstart.sh  magaox_shutdown.sh  magaox_startup.sh  magaox_status.sh  monitor_humidity  mount_cgroups1_cpuset  netconsole_logger  obs_to_movie  query_seeing  resuctrl  rtc_cpuset  rtc_cpuset.bash  rtc_procset  rtc_procset.bash  shmimTCPreceive  shmimTCPtransmit  shot_in_the_dark  sync_cacao  write_magaox_pidfile  xctrl  xlabmode  xlog  xskymode
setup/: 202212070638_manual_steps.txt  20240729_manual_steps.txt  README.md  RT_install.md  _common.sh  add_a_developer.sh  add_a_user.sh  conda_env_base.yml  conda_env_pinned.yml  conda_env_pinned_aarch64.yml  conda_env_pinned_x86_64.yml  conda_env_sup.yml  enable_su_xsup_for_magaox-dev  generate_subuid_subgid.py  install_MagAOX.sh  install_cuda.sh  install_dependencies.sh  install_edt.sh  install_magma.sh  install_mkl.sh  install_mxlib.sh  install_rt_kernel.sh  install_third_party_deps.sh  jupyter_notebook_config.py  makeDirs.sh  make_directories.sh  make_home_data_symlinks.sh  phase1.sh  pre_provision.sh  production_clone_MagAOX.sh  production_provision.sh  provision.sh  provision_as_root.sh  provision_as_user.sh  renew_certificates.sh  restore_users_from_backup.sh  set_permissions.sh  setup_users_and_groups.sh  switch_ubuntu_networkmanager.sh  telegraf.conf  (+1 more)
tests/: Makefile  Makefile.one  groups.dox  magAOX_test.mk  singleTest  singleTest.cpp  singleTest.mk  testMacrosINDI.hpp  testMagAOX.bash  testMagAOX.cpp  testMagAOX.hpp  testMagAOXsetuid.cpp  tests.list  valgrind.md
(+1150 files in other folders)
