[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PupilCorAlign"
description = "Python INDI device to align the coronagraph pupil stop masks."
version = "2024.03.25"

authors = [
  {name = "Sebastiaan Y. Haffert", email = "shaffert@arizona.edu"},
]

[project.scripts]
pupilCorAlign = "PupilCorAlign:PupilCorAlign.console_app"
