[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythonIndiExample"
description = "Python INDI device implementation example"
version = "2023.12.21"

authors = [
  {name = "Joseph D. Long", email = "me@joseph-long.com"},
]

[project.scripts]
pythonIndiExample = "pythonIndiExample:PythonIndiExample.console_app"
